--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 }
 
 header {
-  background-color: #333;
-  color: white;
+  background-color: transparent;
+  color: rgb(0, 0, 0);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -37,7 +37,7 @@ header nav li {
 }
 
 header nav a {
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
 }
 
