--- a/styles.css
+++ b/styles.css
@@ -131,6 +131,44 @@ section a:hover {
   line-height: 1.5;
 }
 
+.menu-btn {
+  display: none;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  margin: 0;
+  padding: 0;
+}
+
+.menu li a {
+  display: block;
+  padding: 16px;
+  text-decoration: none;
+}
+
+@media (max-width: 600px) {
+  .menu {
+    display: none;
+  }
+
+  .menu-btn {
+    display: block;
+  }
+}
+
+
 footer {
   background-color: #333;
   color: white;
